--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-language: python
-
 sudo: required
 
+language: python
+python: 2.7
+
 before_install:
-    - sudo apt-get install make git python-dev python-setuptools
-    - sudo apt-get install python-numpy python-numpy-dev python-scipy python-matplotlib
-    - sudo apt-get install python-yaml python-progressbar
+    - sudo apt-get install make git python-dev python-setuptools python-numpy python-numpy-dev python-scipy python-matplotlib python-yaml python-progressbar
     - sudo easy_install pyavl
 
 install:
