--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,20 @@ language: python
 python: 2.7
 
 before_install:
-    - sudo apt-get install make git python-dev python-setuptools python-numpy python-numpy-dev python-scipy python-matplotlib python-yaml python-progressbar gfortran
-    - sudo easy_install pyavl
-    - curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx 
-    - cd fomosto-qseis-2006a; ./configure; sudo  make install; cd ..
+    - "sudo apt-get install make git python-dev python-setuptools python-numpy python-numpy-dev python-scipy python-matplotlib python-yaml python-progressbar gfortran"
+    - "sudo easy_install pyavl"
+    - "pip install flake8 --use-mirrors"
+    - "curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx" 
+    - "cd fomosto-qseis-2006a; ./configure; sudo  make install; cd .."
+
+before_script:
+    - "flake8"
 
 install:
-    - sudo python setup.py install
+    - "sudo python setup.py install"
 
 script:
-    - sudo python test/test_all.py
+    - "sudo python test/test_all.py"
 
 notifications:
     email: false
