--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ language: python
 python: 2.7
 
 before_install:
-    - "sudo apt-get install make git python-dev python-numpy-dev gfortran"
+    - "sudo apt-get install make git python-dev python-numpy-dev gfortran libblas-dev libblas-devi libatlas-dev"
     - "pip install numpy scipy matplotlib pyyaml progressbar setuptools flake8"
-    - "pip install flake8 --use-mirrors"
     - "sudo easy_install pyavl"
     - "curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx" 
     - "cd fomosto-qseis-2006a; ./configure; sudo  make install; cd .."
