--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache: pip
 
 addons:
     apt:
-        packages: [python-dev, numpy-dev, gfortran, libblas-dev, libatlas-dev]
+        packages: [python-dev, python-numpy-dev, gfortran, libblas-dev, libatlas-dev]
 
 
 before_install:
