--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: python
 python:
     - 2.7
@@ -12,9 +10,9 @@ addons:
 
 before_install:
     - "pip install scipy matplotlib pyyaml progressbar setuptools flake8"
-    - "sudo easy_install pyavl"
+    - "easy_install pyavl"
     - "curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx" 
-    - "cd fomosto-qseis-2006a; ./configure; sudo  make install; cd .."
+    - "cd fomosto-qseis-2006a; ./configure; make; cd ..; export PATH=$PATH:`pwd`/src"
 
 before_script:
     - "flake8 src/ apps/ --exit-zero"
