--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
     - "flake8 src/ apps/ --exit-zero"
 
 install:
-    - "sudo python setup.py install."
+    - "sudo python setup.py install"
 
 script:
     - "python test/test_all.py"
