--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: python
 
 matrix:
     include:
-        - os: linux
-          sudo: required
-          python: 2.7
-          cache: pip
-          virtualenv:
-              system_site_packages: true
+        #        - os: linux
+        #  sudo: required
+        #  python: 2.7
+        #  cache: pip
+        #  virtualenv:
+        #      system_site_packages: true
         - os: osx
           osx_image: xcode7.3
           language: generic
@@ -17,14 +17,14 @@ addons:
         packages: [ python-dev, python-scipy, gfortran, libatlas-dev, libopenblas-dev, python-matplotlib, python-yaml, python-tk ]
 
 before_install:
-    - "if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew tap homebrew/science; fi"
-    - "if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew tap homebrew/python; fi"
-    - "if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew update; fi"
-    - "if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew install python numpy scipy matplotlib gfortran gcc; fi"
-    - "pip install progressbar setuptools flake8"
-    - "easy_install pyavl"
-    - "curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx" 
-    - "cd fomosto-qseis-2006a; ./configure; make; export PATH=$PATH:`pwd`/src; cd .."
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew tap homebrew/science; fi'
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew tap homebrew/python; fi'
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew update; fi'
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; brew install python numpy scipy matplotlib gfortran gcc; fi'
+    - 'pip install progressbar setuptools flake8'
+    - 'easy_install pyavl'
+    - 'curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx'
+    - 'cd fomosto-qseis-2006a; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..'
 
 before_script:
     - "flake8 src/ apps/ --exit-zero"
