--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/science; fi'
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/python; fi'
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi'
-    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python numpy scipy matplotlib gfortran gcc; fi'
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python numpy scipy matplotlib gcc; fi'
     - 'pip install progressbar setuptools flake8'
     - 'easy_install pyavl'
     - 'curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx'
