Fixing OSX yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,14 @@ matrix:
 
 addons:
     apt:
-        packages: [ python-dev, python-scipy, gfortran, libatlas-dev, libopenblas-dev, python-matplotlib, python-yaml, python-tk ]
+        packages: [ python-dev, python-scipy, gfortran, libatlas-dev, libopenblas-dev, python-matplotlib, python-yaml, python-tk, libyaml-dev ]
 
 before_install:
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/science; fi'
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/python; fi'
     - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi'
-    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python numpy scipy matplotlib gcc; fi'
-    - 'pip install progressbar setuptools flake8'
+    - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python numpy scipy matplotlib gcc libyaml; fi'
+    - 'pip install progressbar setuptools flake8 pyyaml'
     - 'easy_install pyavl'
     - 'curl -s http://kinherd.org/fomosto-qseis-2006a.tar.gz | tar zvx'
     - 'cd fomosto-qseis-2006a; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..'
