--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ matrix:
 
 addons:
     apt:
-        packages: [ python-qt4, python-qt4-dev, python-dev, python-scipy,
-            gfortran, libatlas-dev, libopenblas-dev, python-matplotlib,
-            python-yaml, python-tk, libyaml-dev, poppler-utils,
-            ghostscript, imagemagick ]
+        packages: [ python-qt4, python-qt4-gl, python-qt4-dev, python-dev,
+            python-scipy, gfortran, libatlas-dev, libopenblas-dev,
+            python-matplotlib, python-yaml, python-tk, libyaml-dev,
+            poppler-utils, ghostscript, imagemagick ]
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
