travis.yml: fixing PATH for psgrn/pscmp

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
     - git clone https://github.com/pyrocko/fomosto-psgrn-pscmp
     - cd fomosto-psgrn-pscmp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
     - git clone https://github.com/pyrocko/fomosto-qssp.git
-    - cd fomosto-qssp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
+    - cd fomosto-qssp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src/pscmp:`pwd`/src/psgrn; cd ..
 
 before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then flake8 src/ apps/ test/ ; fi
