--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 
+env:
+    - OMP_NUM_THREADS=4
+
 matrix:
     include:
         - os: linux
@@ -24,8 +27,9 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/science; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew tap homebrew/python; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink libyaml; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc libyaml; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc libyaml clang-omp; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pip install matplotlib; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then xcode-select --install; fi
     - pip install progressbar setuptools flake8 pyyaml coveralls
     - easy_install pyavl
     - git clone https://github.com/pyrocko/fomosto-qseis
