fixing travis CI for psgrn pscmp

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0 ; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sh -e /etc/init.d/xvfb start ; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3 ; fi
-    - OMP_NUM_THREADS=4
+    - export OMP_NUM_THREADS=4
+    - echo $PATH
 
 install:
     - sudo python setup.py install
