--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ before_install:
     - git clone https://github.com/pyrocko/fomosto-qseis
     - cd fomosto-qseis; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
     - git clone https://github.com/pyrocko/fomosto-psgrn-pscmp
-    - cd fomosto-psgrn-pscmp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
+    - cd fomosto-psgrn-pscmp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src/pscmp:`pwd`/src/psgrn; cd ..
     - git clone https://github.com/pyrocko/fomosto-qssp.git
-    - cd fomosto-qssp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src/pscmp:`pwd`/src/psgrn; cd ..
+    - cd fomosto-qssp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
 
 before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then flake8 src/ apps/ test/ ; fi
