--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink libyaml; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc libyaml; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pip install matplotlib; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then xcode-select --install; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then xcode-select --install || true ; fi
     - pip install progressbar setuptools flake8 pyyaml coveralls
     - easy_install pyavl
     - git clone https://github.com/pyrocko/fomosto-qseis
