--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
     - cd fomosto-qssp; autoreconf -i; ./configure; make; export PATH=$PATH:`pwd`/src; cd ..
 
 before_script:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then flake8 src/ apps/ test/ ; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then flake8 src/ test/ ; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0 ; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sh -e /etc/init.d/xvfb start ; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3 ; fi
