--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ cache:
 addons:
     apt:
         packages: [ python-qt4, python-qt4-gl, python-qt4-dev, python-dev,
-            python-scipy, gfortran, libatlas-dev, libopenblas-dev,
+            python-scipy, gfortran, libatlas-dev, libopenblas-dev, python-future,
             python-matplotlib, python-yaml, python-tk, libyaml-dev,
             poppler-utils, ghostscript, imagemagick, xvfb ]
 
