--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [report]
 exclude_lines =
-    def __repr__
-    def __str__
+    def __repr__:
+    def __str__:
     raise AssertionError
     raise NotImplementedError
-    if __name__ == __main__
+    if __name__ == .__main__.:
