--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,14 @@
+[run]
+omit = 
+    */apps/*
+
 [report]
 exclude_lines =
-    def __repr__:
-    def __str__:
+    def __repr__
+    def __str__
     raise AssertionError
     raise NotImplementedError
+    raise ValueError
+    raise
     if __name__ == .__main__.:
+    logger.error
