--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,11 @@ before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3 ; fi
 
 install:
-    - sudo python setup.py install
+    - python setup.py install
 
 script:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo python setup.py test; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo coverage run --source=pyrocko setup.py test; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python setup.py test; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coverage run --source=pyrocko setup.py test; fi
 
 after_success:
     - coveralls
