--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ matrix:
     include:
         - os: linux
           sudo: required
-          python: 
-            - "2.7"
-            - "3.5"
+          python: 2.7
           virtualenv:
               system_site_packages: true
 #        - os: osx
