--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,8 @@ install:
 
 script:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python setup.py test ; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coverage run --source=pyrocko setup.py test ; fi
+      # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coverage run --source=pyrocko setup.py test ; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coverage run --source=pyrocko test/test_datacube.py test ; fi
 
 after_success:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coveralls; fi
