--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     include:
         - os: linux
           python: 2.7
+          sudo: required
           virtualenv:
               system_site_packages: true
 #        - os: osx
