--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       python: 2.7
       virtualenv:
           system_site_packages: true
+      sudo: true
 #        - os: osx
 #          osx_image: xcode7.3
 #          language: generic
