--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ install:
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python setup.py test ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis_wait coverage run --source=pyrocko test/test_all.py ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis_wait coverage run --source=pyrocko test/run.py ; fi
   # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coverage run --source=pyrocko test/test_response_plot.py; fi
 
 after_success:
