Added backwards compat test // mv .coveragerc into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,21 @@ universal=1
 inplace=1
 
 [nosetests]
-verbosity=1
+verbosity=2
 detailed-errors=1
 with-coverage=1
 cover-erase=1
 cover-package=pyrocko
+
+
+[coverage:report]
+exclude_lines =
+    def __repr__
+    def __str__
+    raise AssertionError
+    raise NotImplementedError
+    raise ValueError
+    raise
+    if __name__ == .__main__.:
+    logger.error
+    if pyrocko.grumpy:
