--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,7 @@ exclude_lines =
     if __name__ == .__main__.:
     logger.error
     if pyrocko.grumpy:
+
+[flake8]
+exclude =
+    src/gui/qt_compat.py
