.gitignore Vagrant // requirements.txt upd

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ test/example_run_dir
 
 # Anaconda
 miniconda.sh
-maintenance/pyrocko-anaconda-deploy
+maintenance/anaconda/pyrocko-anaconda-deploy
 
 # Other stuff
 *.err_log
+
+pyrocko.git/
