--- a/maintenance/anaconda/meta.yaml
+++ b/maintenance/anaconda/meta.yaml
@@ -5,7 +5,7 @@ package:
   version: {{ data.get('version') }}
 
 source:
-  path: ../../../
+  path: ./pyrocko.git/
   # git-url: https://github.com/pyrocko/pyrocko
 
 requirements:
