--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,9 @@
 description-file=maintenance/readme-pip.rst
 license-file=LICENSE.md
 
+[options]
+requires=files: requirements.txt
+
 [bdist_wheel]
 universal=1
 
