PIP: Added requirements to pip install

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,17 @@
 [metadata]
-description-file=maintenance/readme-pip.rst
-license-file=LICENSE.md
+description-file = file: maintenance/readme-pip.rst
+license-file = file: LICENSE.md
 
 [options]
-requires=files: requirements.txt
+install_requires = numpy>=1.8
+    scipy
+    pyyaml
+    matplotlib
+    progressbar2
+    future
+    requests
+    nose
+    PyOpenGL
 
 [bdist_wheel]
 universal=1
