pypi: upd deployment

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
-description-file = file: maintenance/readme-pip.rst
-license-file = file: LICENSE.md
+long_description= file: maintenance/readme-pip.rst
 
 [bdist_wheel]
 universal=1
