--- a/maintenance/anaconda/meta.yaml
+++ b/maintenance/anaconda/meta.yaml
@@ -23,8 +23,8 @@ requirements:
     - requests
 
 about:
-  home: http://pyrocko.org
+  home: https://pyrocko.org
   license: GPL3
   license-family: GPL
   summary: A versatile seismology toolkit for Python.
-  doc_url: http://pyrocko.org/docs
+  doc_url: https://pyrocko.org/docs
