--- a/maintenance/anaconda/Vagrantfile
+++ b/maintenance/anaconda/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "jhcook/macos-sierra"
+  config.vm.box = "AndrewDryga/vagrant-box-osx"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -69,6 +69,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
     sudo chown -R vagrant:staff anaconda
     rm -rf anaconda/pyrocko.git/.git
-    ./anaconda/deploy.sh -u
+    ./anaconda/build_anaconda3.sh
+    ./anaconda/build_anaconda2.sh
   SHELL
 end
