--- a/maintenance/vagrant/ubuntu-18.04/Vagrantfile
+++ b/maintenance/vagrant/ubuntu-18.04/Vagrantfile
@@ -1,7 +1,7 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "clicars/ubuntu18lts"
+  config.vm.box = "ubuntu/bionic64"
   config.vm.synced_folder "../../../test/data", "/pyrocko-test-data"
   config.vm.provider "virtualbox" do |vb|
      vb.customize ["modifyvm", :id, "--memory", "3072"]
