--- a/maintenance/vagrant/ubuntu-16.04/Vagrantfile
+++ b/maintenance/vagrant/ubuntu-16.04/Vagrantfile
@@ -6,4 +6,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider "virtualbox" do |vb|
      vb.customize ["modifyvm", :id, "--memory", "3072"]
   end
+  config.vm.network :private_network, ip: '192.168.115.9'
+  config.vm.network :forwarded_port, guest: 22, host: 22009, id: 'ssh'
 end
